[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "emacs-paw"
version = "0.1.8"
description = "Study for a life in Emacs with advanced annotation and language learning tools."
readme = "README_PAW_CLI.md"
authors = [{ name = "Damon Chan" }]
license = { file = "LICENSE" }
keywords = ["Emacs", "annotation", "language learning", "dictionary", "sql", "org-mode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "Flask",
    "flask-cors",
    "requests",
    "nltk",
    "mecab-python3",
    "unidic-lite",
    "janome"
]
[project.urls]
Homepage = "https://github.com/chenyanming/paw"
Repository = "https://github.com/chenyanming/paw"
[project.scripts]
paw = "paw.cli:main"
[tool.setuptools.packages.find]
where = ["."]
include = ["paw"]
